--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,13 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "gfont"
-description=  "Browse and install fonts from fonts.google.com"
+authors = [
+    "Phyo WÃ¡i Lin <email@email.net>"
+]
+description = "Browse and install fonts from fonts.google.com"
 version = "0.0.4"
 readme = "README.md"
 keywords = ["font", "google"]
-license = { file = "LICENSE" }
-dependencies = ["requests"]
-requires-python = ">=3.8"
+license = "MIT"
 classifiers = [
     "Environment :: Console",
     "Operating System :: POSIX :: Linux",
@@ -24,3 +21,27 @@ gfont = "gfont:main"
 
 [tool.setuptools]
 packages = ["gfont"]
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.poetry.dependencies]
+requests = "*"
+python = "^3.8"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+pre-commit = "*"
+isort = "*"
+
+[tool.black]
+line-length = 120
+target-version = ['py38']
+
+[tool.isort]
+multi_line_output = 3
+combine_as_imports = true
+include_trailing_comma = true
+force_grid_wrap = 3
+ensure_newline_before_comments = true
