--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,45 @@
 build==1.2.1
+CacheControl==0.14.0
 certifi==2024.6.2
+cffi==1.16.0
+cfgv==3.4.0
 charset-normalizer==3.3.2
+cleo==2.1.0
+crashtest==0.4.1
+cryptography==42.0.8
+distlib==0.3.8
+dulwich==0.21.7
+fastjsonschema==2.19.1
+filelock==3.14.0
+identify==2.5.36
 idna==3.7
+importlib_metadata==7.1.0
+installer==0.7.0
+jaraco.classes==3.4.0
+jeepney==0.8.0
+keyring==24.3.1
+more-itertools==10.3.0
+msgpack==1.0.8
+nodeenv==1.9.1
 packaging==24.1
+pexpect==4.9.0
+pkginfo==1.11.1
+platformdirs==4.2.2
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+pre-commit==3.7.1
+ptyprocess==0.7.0
+pycparser==2.22
 pyproject_hooks==1.1.0
+PyYAML==6.0.1
+rapidfuzz==3.9.3
 requests==2.32.3
+requests-toolbelt==1.0.0
+SecretStorage==3.3.3
+shellingham==1.5.4
+tomlkit==0.12.5
+trove-classifiers==2024.5.22
 urllib3==2.2.1
+virtualenv==20.26.2
+zipp==3.19.2
