--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,27 @@
+# [tool.poetry]
+
+[project]
+name = "gfont"
+version="0.0.4"
+description = "Browse and install fonts from fonts.google.com"
+readme = "README.md"
+keywords = ["font", "google"]
+classifiers = [
+    "Environment :: Console",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python",
+    "Topic :: System :: Console Fonts",
+    "Topic :: Text Processing :: Fonts"
+]
+
+[project.scripts]
+gfont = "gfont:main"
+
 [tool.poetry]
 name = "gfont"
-authors = ["Phyo Wai Lin <email@email.net>"]
+version="0.0.4"
+authors = ["Phyo Wai Lin <phyowailin2004@proton.me>"]
 description = "Browse and install fonts from fonts.google.com"
-version = "0.0.4"
 readme = "README.md"
 keywords = ["font", "google"]
 license = "MIT"
@@ -13,9 +32,6 @@ classifiers = [
     "Topic :: System :: Console Fonts",
     "Topic :: Text Processing :: Fonts"
 ]
-
-[tool.poetry.scripts]
-gfont = "gfont:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
