--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
-[project]
+[tool.poetry.scripts]
+gfont = "gfont:main"
+
+[tool.poetry]
 name = "gfont"
-version="0.0.9"
+version = "0.0.9"
 description = "Browse and install fonts from fonts.google.com"
 readme = "README.md"
+license = "MIT"
 authors = [
-    { name = "Phyo Wai Lin", email="phyowailin2004@proton.me" }
+    "Phyo Wai Lin <phyowailin2004@proton.me>"
 ]
 keywords = ["font", "google"]
-license = { file = "LICENSE" }
 classifiers = [
     "Environment :: Console",
     "Operating System :: POSIX :: Linux",
@@ -15,20 +18,6 @@ classifiers = [
     "Topic :: System :: Console Fonts",
     "Topic :: Text Processing :: Fonts"
 ]
-dependencies = [
-    "requests"
-]
-
-[project.scripts]
-gfont = "gfont:main"
-
-[tool.poetry]
-name = "gfont"
-version="0.0.9"
-authors = [
-    "Phyo Wai Lin <phyowailin2004@proton.me>"
-]
-description = "Browse and install fonts from fonts.google.com"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -40,7 +29,7 @@ pre-commit = "*"
 isort = "*"
 
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
