--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ pre-commit = "*"
 isort = "*"
 
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 multi_line_output = 3
