Update flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,5 @@ ensure_newline_before_comments = true
 
 
 [flake8]
-# ignore = E501, W605, F901, F401, F403, F405
+ignore = E501, W605, F901, F401, F403, F405
 max-line-length = 120
